# L-chat

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: client-deamon.toml  client-ui.toml  server.toml  test.toml
include/: chat_storage.h  config_parser.h
src/: chat_storage.cpp  config_parser.cpp
src/client-deamon/: client-deamon.cpp
src/client-deamon/config/: client-deamon.toml
src/client-deamon/storage/: chat_log_185.239.86.66_8080_my_secure_key.xml
src/client-ui/: client-ui.cpp
src/client-ui/config/: client-ui.toml
src/server/: server.cpp
src/server/config/: server.toml
src/server/storage/: chat_log_MyChatRoom.xml
storage/: chat_log.xml  chat_log_127.0.0.1_8080_my_secure_key.xml  chat_log_MyChatRoom.xml
